Permissions are important...

--- a/templates/live.html
+++ b/templates/live.html
@@ -34,8 +34,10 @@
 </head>
 <body>
     <h1>Live Attendance <span class="label error" id="ws-status">Disconnected</span></h1>
-    <p>Members will highlight when they log in.</p>
-    <p>Currently read only because the code is a mess</p>
+    <ul>
+        <li>This page is read only</li>
+        <li>This page does not update on mass sign out (+404)</li>
+    </ul>
 
     <table class="primary">
         <thead>
